--- a/quest-gasket.html
+++ b/quest-gasket.html
@@ -6,8 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body class="case-study-body">
-    <!-- NAV BAR -->
+
+<!-- NAV BAR -->
 <nav class="site-nav">
   <div class="site-nav-inner">
     <a href="index.html" class="site-nav-brand">Shannon Wilson</a>
@@ -18,253 +20,254 @@
   </div>
 </nav>
 
+<header class="cs-header">
+  <a href="index.html" class="cs-back-link">← Back to home</a>
+</header>
 
-  <header class="cs-header">
-    <a href="index.html" class="cs-back-link">← Back to home</a>
-  </header>
+<main class="cs-main">
 
-  <main class="cs-main">
-    <!-- HERO SECTION -->
-    <section class="cs-hero">
-      <div class="cs-hero-text">
-        <p class="cs-label">UX Case Study</p>
-        <h1>Quest Gasket</h1>
-        <p class="cs-subtitle">
-          A complete redesign of Quest Gasket’s industrial website, including a new sitemap,
-          e-commerce structure, and UX-focused product navigation system.
-        </p>
-      </div>
-
-      <aside class="cs-meta">
-        <h2>Project Details</h2>
-        <dl>
-          <dt>Project Type</dt>
-          <dd>End-to-end Website + Branding</dd>
-
-          <dt>Role</dt>
-          <dd>Sole UX/UI Researcher & Designer</dd>
-
-          <dt>Industry</dt>
-          <dd>Industrial Sealing / Manufacturing</dd>
-
-          <dt>Tools</dt>
-          <dd>Balsamiq, Figma</dd>
-        </dl>
-        <a class="cs-primary-btn" href="https://questgasket.com" target="_blank" rel="noopener">
-          View live website
-        </a>
-      </aside>
-    </section>
-
-    <!-- OVERVIEW -->
-    <section class="cs-section">
-      <h2>Overview</h2>
-      <p>
-        Quest Gasket is an industrial sealing manufacturer that needed a complete website overhaul.
-        Their existing site was outdated, difficult to navigate, and lacked a clear product structure.
-        The client also wanted to introduce an online store to improve internal efficiency and reduce
-        manual ordering.
+  <!-- HERO SECTION -->
+  <section class="cs-hero">
+    <div class="cs-hero-text">
+      <p class="cs-label">UX Case Study</p>
+      <h1>Quest Gasket Website Redesign</h1>
+      <p class="cs-subtitle">
+        A full website redesign for an industrial supplier, focused on creating a
+        clear product hierarchy, modern navigation, and a scalable foundation for
+        a future online store.
       </p>
+    </div>
+
+    <aside class="cs-meta">
+      <h2>Project Details</h2>
+      <dl>
+        <dt>Project Type</dt>
+        <dd>Website Redesign + Information Architecture</dd>
+
+        <dt>Role</dt>
+        <dd>UX Research, IA, UI (Lo-Fi)</dd>
+
+        <dt>Industry</dt>
+        <dd>Industrial Sealing / Manufacturing</dd>
+
+        <dt>Tools</dt>
+        <dd>Balsamiq, Figma</dd>
+      </dl>
+
+      <a class="cs-primary-btn" href="https://questgasket.com" target="_blank" rel="noopener">
+        View live website
+      </a>
+    </aside>
+  </section>
+
+  <!-- OVERVIEW -->
+  <section class="cs-section">
+    <h2>Overview</h2>
+    <p>
+      Quest Gasket is an industrial sealing manufacturer whose legacy website made it
+      difficult for customers to find the correct product family, series, or technical
+      information. The structure was flat, the navigation was unclear, and internal
+      staff often had to guide buyers manually.
+    </p>
+    <p>
+      The company also wanted to introduce an online store—but the existing architecture
+      couldn’t scale to support ecommerce. My goal was to modernize the site, reorganize
+      the product structure, and design a sitemap flexible enough for current needs and
+      future growth.
+    </p>
+  </section>
+
+  <!-- CHALLENGE + GOALS -->
+  <section class="cs-section cs-two-column">
+
+    <div>
+      <h2>The Challenge</h2>
       <p>
-        I led this project end-to-end — from research and information architecture to wireframes and
-        handoff — designing a modern, intuitive website aligned with current UX standards.
+        The original website suffered from major UX issues:
       </p>
-    </section>
-
-    <!-- CHALLENGE + GOALS -->
-    <section class="cs-section cs-two-column">
-      <div>
-        <h2>The Challenge</h2>
-        <p>The original website had several issues:</p>
-        <ul>
-          <li>Complex and confusing product organization</li>
-          <li>No clear hierarchy or pathways for finding products</li>
-          <li>No e-commerce system</li>
-          <li>Outdated navigation patterns and layout</li>
-          <li>Heavy reliance on manual quoting and email communication</li>
-        </ul>
-        <p><strong>The client wanted a website that:</strong></p>
-        <ul>
-          <li>Felt modern and professional</li>
-          <li>Made product discovery intuitive</li>
-          <li>Reduced staff workload through an online store</li>
-          <li>
-            Reflected industrial conventions while remaining approachable for non-technical users
-          </li>
-        </ul>
-      </div>
-
-      <div>
-        <h2>Project Goals</h2>
-        <ul>
-          <li>Create a clean, scalable information architecture for a large product catalog</li>
-          <li>Build a new sitemap to streamline navigation</li>
-          <li>Wireframe a full e-commerce flow</li>
-          <li>Clarify product specs, technical data, and ordering options</li>
-          <li>Provide an interactive prototype for client review before development</li>
-        </ul>
-      </div>
-    </section>
-
-    <!-- PROCESS -->
-    <section class="cs-section">
-      <h2>Process</h2>
-
-      <article class="cs-subsection">
-        <h3>1. Website Audit</h3>
-        <p>
-          I began with a full evaluation of the existing site, identifying redundant pages,
-          inconsistent product groupings, missing content, and dead-end navigation paths.
-          This audit became the foundation for restructuring the entire site.
-        </p>
-
-        <!-- IMAGE PLACEHOLDER: OLD SITE/AUDIT -->
-        <figure class="cs-figure placeholder">
-          <div class="placeholder-box">
-            <span>Screenshot of original website / audit notes</span>
-          </div>
-          <figcaption>Early audit of the existing Quest Gasket website and content structure.</figcaption>
-        </figure>
-      </article>
-
-      <article class="cs-subsection">
-        <h3>2. Information Architecture & Sitemap</h3>
-        <p>
-          Working closely with the client, I reorganized the product catalog and created a completely
-          new sitemap. We grouped related product categories, set clear naming conventions, and
-          designed straightforward paths from homepage → category → product → checkout.
-        </p>
-        <p>
-          The sitemap went through client review sessions and was refined to support current needs
-          and future product expansion.
-        </p>
-
-        <!-- IMAGE PLACEHOLDER: SITEMAP -->
-        <figure class="cs-figure">
-          <!-- Replace src with your sitemap image when ready -->
-          <!-- <img src="images/quest-sitemap.png" alt="Quest Gasket sitemap" /> -->
-          <div class="placeholder-box">
-            <span>Final sitemap after client consultation</span>
-          </div>
-          <figcaption>Final sitemap created to simplify navigation and scale with new products.</figcaption>
-        </figure>
-      </article>
-
-      <article class="cs-subsection">
-        <h3>3. Wireframing the New Website</h3>
-        <p>
-          Using Balsamiq, I created low-fidelity wireframes for the homepage, navigation, product
-          category pages, product detail pages, technical information sections, a video library, and
-          e-commerce flows.
-        </p>
-        <p>
-          The wireframes were hot-spotted to mimic interactions, allowing the client to click through
-          and experience the flow before visual design and development.
-        </p>
-
-        <!-- IMAGE PLACEHOLDERS: WIREFRAMES -->
-        <div class="cs-grid">
-          <figure class="cs-figure">
-            <div class="placeholder-box">
-              <span>Homepage wireframe</span>
-            </div>
-            <figcaption>Homepage wireframe with clear primary navigation and call-to-actions.</figcaption>
-          </figure>
-
-          <figure class="cs-figure">
-            <div class="placeholder-box">
-              <span>Menu & category wireframes</span>
-            </div>
-            <figcaption>Navigation and category pages designed for quick product discovery.</figcaption>
-          </figure>
-        </div>
-      </article>
-
-      <article class="cs-subsection">
-        <h3>4. Product Page System</h3>
-        <p>
-          Because Quest Gasket offers many product types, I designed a flexible layout system that
-          could be reused across product pages while accommodating different technical needs.
-        </p>
-        <p>The product page template included:</p>
-        <ul>
-          <li>Key specs and technical data in a scannable layout</li>
-          <li>Technical drawings or diagrams</li>
-          <li>Downloadable PDFs or videos for installation and product details</li>
-          <li>Clear options for “Request a Quote” or “Add to Cart”</li>
-        </ul>
-
-        <!-- IMAGE PLACEHOLDERS: PRODUCT PAGES -->
-        <div class="cs-grid">
-          <figure class="cs-figure">
-            <div class="placeholder-box">
-              <span>Product page wireframe</span>
-            </div>
-            <figcaption>Standardized product page layout for consistency across the catalog.</figcaption>
-          </figure>
-
-          <figure class="cs-figure">
-            <div class="placeholder-box">
-              <span>Technical info & resources</span>
-            </div>
-            <figcaption>Technical information and resources designed for easy reference.</figcaption>
-          </figure>
-        </div>
-      </article>
-    </section>
-
-    <!-- OUTCOME / RESULTS -->
-    <section class="cs-section">
-      <h2>Outcome</h2>
-      <p>
-        All wireframes were presented to the client using a clickable prototype. After review and
-        minor refinements, the design was approved and handed off to the development team with clear
-        annotations and structure.
-      </p>
-
-      <ul class="cs-results">
-        <li>Created a scalable structure for a large and complex product catalog.</li>
-        <li>Introduced Quest Gasket’s first e-commerce-ready website framework.</li>
-        <li>Clarified product navigation and reduced redundancy in the information architecture.</li>
-        <li>Delivered an interactive prototype to support implementation and stakeholder alignment.</li>
-      </ul>
-
-      <!-- If you get real metrics later, you can add a small metrics block -->
-      <!--
-      <div class="cs-metrics">
-        <h3>Impact (Planned / To Measure)</h3>
-        <ul>
-          <li>Reduced time to find a product by X%</li>
-          <li>Increase in self-service orders vs manual email requests</li>
-        </ul>
-      </div>
-      -->
-    </section>
-
-    <!-- NEXT STEPS / REFLECTION -->
-    <section class="cs-section">
-      <h2>What I’d Do Next</h2>
       <ul>
-        <li>Run usability testing with key customer segments post-launch.</li>
-        <li>Introduce advanced filtering and search for product specifications.</li>
-        <li>Explore product comparison functionality for similar SKUs.</li>
-        <li>Monitor analytics to refine navigation and content based on behavior.</li>
+        <li>Unclear and inconsistent product categories</li>
+        <li>No hierarchy to guide users through families and series</li>
+        <li>No ecommerce system or supporting structure</li>
+        <li>Outdated navigation and terminology</li>
+        <li>High reliance on manual support and quoting</li>
       </ul>
-    </section>
 
-    <!-- PROJECT NAVIGATION -->
-    <nav class="cs-project-nav">
-      <a href="index.html" class="cs-secondary-btn">← Back to home</a>
-      <!-- Update these links if you create separate pages for other projects -->
-      <div class="cs-project-nav-links">
-        <span>Next project:</span>
-        <a href="flying-wings.html">Flying Wings →</a>
+      <p><strong>The biggest challenge:</strong></p>
+      <p>
+        Reorganizing the product catalog <em>and</em> creating an information architecture
+        that could support a future online store—something the existing structure simply
+        couldn’t handle.
+      </p>
+    </div>
+
+    <div>
+      <h2>Project Goals</h2>
+      <ul>
+        <li>Build a clean, scalable sitemap for a large product catalog</li>
+        <li>Modernize patterns to reflect current UX standards</li>
+        <li>Create a structure that supports both browsing and “I know what I need” flows</li>
+        <li>Prepare the site for ecommerce implementation</li>
+        <li>Deliver a clickable prototype to validate the flow before development</li>
+      </ul>
+    </div>
+
+  </section>
+
+  <!-- PROCESS -->
+  <section class="cs-section">
+    <h2>Process</h2>
+
+    <article class="cs-subsection">
+      <h3>1. Website Audit</h3>
+      <p>
+        I began by auditing the existing site. This included documenting navigation gaps,
+        redundant pages, inconsistent naming, and unclear product groupings. The audit revealed
+        that users had no clear path to move from category → product → specification.
+      </p>
+
+      <figure class="cs-figure placeholder">
+        <div class="placeholder-box">
+          <span>Screenshot of original website / audit notes</span>
+        </div>
+        <figcaption>
+          Early audit highlighting navigation issues and disorganized content structure.
+        </figcaption>
+      </figure>
+    </article>
+
+    <article class="cs-subsection">
+      <h3>2. Information Architecture & Sitemap</h3>
+      <p>
+        Working with the client, I created a new sitemap that introduced a clear hierarchy:
+        <em>product families → series → specifications/materials</em>. This aligned with how
+        customers actually search and how internal teams describe products.
+      </p>
+      <p>
+        The sitemap went through several iterations, ensuring it remained flexible enough to
+        support the planned online store.
+      </p>
+
+      <figure class="cs-figure">
+        <div class="placeholder-box">
+          <span>Final sitemap after client consultation</span>
+        </div>
+        <figcaption>
+          Final sitemap designed to scale as new products and ecommerce features are added.
+        </figcaption>
+      </figure>
+    </article>
+
+    <article class="cs-subsection">
+      <h3>3. Wireframing the New Website</h3>
+      <p>
+        I produced low-fidelity wireframes using Balsamiq for the home page, navigation levels,
+        product pages, technical information, and ecommerce paths. These wireframes were
+        hot-spotted to create a clickable prototype that stakeholders could navigate.
+      </p>
+
+      <div class="cs-grid">
+        <figure class="cs-figure">
+          <div class="placeholder-box">
+            <span>Homepage wireframe</span>
+          </div>
+          <figcaption>
+            Early homepage wireframe emphasizing clear pathways to key product families.
+          </figcaption>
+        </figure>
+
+        <figure class="cs-figure">
+          <div class="placeholder-box">
+            <span>Menu & category wireframes</span>
+          </div>
+          <figcaption>
+            Redesigned navigation and categories for improved product discovery.
+          </figcaption>
+        </figure>
       </div>
-    </nav>
-  </main>
+    </article>
 
-  <footer class="cs-footer">
-    <p>© 2025 Shannon Wilson. All rights reserved.</p>
-  </footer>
+    <article class="cs-subsection">
+      <h3>4. Product Page System</h3>
+      <p>
+        Quest Gasket’s catalog includes many unique product types, so I designed a reusable,
+        flexible system for product detail pages. Each template supports technical data,
+        drawings, downloadable resources, and clear actions such as “Request a Quote” or
+        “Add to Cart” (for future ecommerce).
+      </p>
+
+      <div class="cs-grid">
+        <figure class="cs-figure">
+          <div class="placeholder-box">
+            <span>Product page wireframe</span>
+          </div>
+          <figcaption>
+            Modular product page layout designed for consistency across all families.
+          </figcaption>
+        </figure>
+
+        <figure class="cs-figure">
+          <div class="placeholder-box">
+            <span>Technical info & resources</span>
+          </div>
+          <figcaption>
+            Resource and technical sections structured for clarity and ease of reference.
+          </figcaption>
+        </figure>
+      </div>
+    </article>
+
+  </section>
+
+  <!-- OUTCOME / RESULTS -->
+  <section class="cs-section">
+    <h2>Outcome</h2>
+    <p>
+      The final sitemap and wireframes were presented through a clickable prototype.
+      After review and small refinements, the design was approved and handed off to
+      development with clear documentation.
+    </p>
+
+    <ul class="cs-results">
+      <li>Created a scalable structure for a large and complex product catalog.</li>
+      <li>Introduced Quest Gasket’s first ecommerce-ready website framework.</li>
+      <li>Clarified navigation patterns and reduced redundancy across pages.</li>
+      <li>Delivered an interactive prototype to align stakeholders before build.</li>
+    </ul>
+
+    <p style="margin-top: 1rem;">
+      The redesigned website is now live:
+      <a href="https://questgasket.com" target="_blank" rel="noopener">
+        questgasket.com
+      </a>
+    </p>
+  </section>
+
+  <!-- NEXT STEPS / REFLECTION -->
+  <section class="cs-section">
+    <h2>What I’d Explore Next</h2>
+    <ul>
+      <li>Usability testing once the new structure has real user traffic</li>
+      <li>Advanced filtering and search for product specifications</li>
+      <li>Product comparison tools for similar SKUs</li>
+      <li>Analytics-driven improvements to navigation patterns</li>
+    </ul>
+  </section>
+
+  <!-- PROJECT NAVIGATION -->
+  <nav class="cs-project-nav">
+    <a href="index.html" class="cs-secondary-btn">← Back to home</a>
+    <div class="cs-project-nav-links">
+      <span>Next project:</span>
+      <a href="flying-wings.html">Flying Wings →</a>
+    </div>
+  </nav>
+
+</main>
+
+<footer class="cs-footer">
+  <p>© 2025 Shannon Wilson. All rights reserved.</p>
+</footer>
+
 </body>
 </html>
