--- a/flying-wings.html
+++ b/flying-wings.html
@@ -30,8 +30,10 @@
         <p class="cs-label">UX Case Study</p>
         <h1>Flying Wings</h1>
         <p class="cs-subtitle">
-          Designing a white-label flight booking experience with a complete end-to-end flow that can be branded for multiple airline and travel partners.
+          Designing a white-label desktop flight booking experience with a complete end-to-end flow
+          that can be branded and reused for multiple airline and travel partners.
         </p>
+
       </div>
 
       <aside class="cs-meta">
@@ -56,46 +58,42 @@
     <section class="cs-section">
       <h2>Overview</h2>
       <p>
-        Flying Wings is a white-label travel booking platform created for a client based in China.
+        Flying Wings is a white-label travel booking experience created for a client based in China.
         The project was initiated through a Canadian partner who works primarily in the airline
         industry. They provided a high-level sitemap and needed a desktop flight booking experience
         that could be branded for their client and reused for future airline partners.
       </p>
       <p>
-        I designed both non-branded and branded high-fidelity prototypes in Figma, covering the full
-        booking journey from search to checkout. The goal was to deliver a realistic, clickable
-        experience that could be used in client presentations and as a foundation for development.
+        Starting from that basic sitemap, I designed both non-branded and branded high-fidelity
+        prototypes in Figma, covering the full booking journey from search to checkout. The goal
+        was to deliver a realistic, clickable experience that could be used in client presentations
+        and as a foundation for development.
       </p>
-    </section>
+  </section>
+
 
     <!-- CHALLENGE + GOALS -->
     <section class="cs-section cs-two-column">
-      <div>
-        <h2>The Challenge</h2>
-        <p>The team needed a booking flow that worked for two different purposes:</p>
-        <ul>
-          <li>A realistic flight booking experience for travelers.</li>
-          <li>A clean, structured demo that sales could present to potential clients.</li>
-        </ul>
-        <p>Starting from only a basic sitemap, the design had to:</p>
-        <ul>
-          <li>Look modern and trustworthy for an international audience.</li>
-          <li>Be easy to rebrand for different airline and travel partners.</li>
-          <li>Show a complete journey from homepage to confirmation.</li>
-          <li>Be fully clickable so stakeholders could “feel” the experience.</li>
-        </ul>
-      </div>
+     <div>
+      <h2>The Challenge</h2>
+      <p>The team needed a booking flow that worked for two different purposes:</p>
+      <ul>
+        <li>A realistic flight booking experience for travelers.</li>
+        <li>A clean, structured demo that sales could present to potential clients.</li>
+      </ul>
+      <p>Starting from only a basic sitemap, the design also had to:</p>
+      <ul>
+        <li>Look modern and trustworthy for an international audience.</li>
+        <li>Be easy to rebrand for different airline and travel partners.</li>
+        <li>Show a complete journey from homepage to confirmation.</li>
+        <li>Be fully clickable so stakeholders could “feel” the experience.</li>
+      </ul>
+      <p>
+        <strong>Biggest challenge:</strong> transforming that high-level sitemap into a complete,
+        functional booking flow that could also be white-labeled and reused for future partners.
+      </p>
+    </div>
 
-      <div>
-        <h2>Project Goals</h2>
-        <ul>
-          <li>Create an end-to-end flow (search → results → details → checkout → confirmation).</li>
-          <li>Support both non-branded and branded UI states.</li>
-          <li>Use patterns that are familiar from modern travel sites.</li>
-          <li>Design a layout that can be easily white-labeled for future clients.</li>
-          <li>Deliver a Figma prototype with hotspot interactions for demos and reviews.</li>
-        </ul>
-      </div>
     </section>
 
     <!-- PROCESS -->
@@ -308,9 +306,8 @@
     <section class="cs-section">
       <h2>Outcome</h2>
       <p>
-        The final deliverable included both non-branded and branded high-fidelity prototypes, along
-        with a complete interactive flow from search to checkout. The client approved the design
-        and it was handed off to the development team for implementation.
+        The final deliverable included both a non-branded white-label base and a branded high-fidelity
+        prototype, along with a complete interactive flow from search to checkout.
       </p>
 
       <ul class="cs-results">
