--- a/house-of-rock.html
+++ b/house-of-rock.html
@@ -18,7 +18,6 @@
   </div>
 </nav>
 
-
   <header class="cs-header">
     <a href="index.html" class="cs-back-link">← Back to home</a>
   </header>
@@ -66,9 +65,9 @@
         they want to attend.
       </p>
       <p>
-        This is an ongoing, multi-phase project. My work has focused on auditing the existing
-        experience, redesigning key flows and components, and delivering high-fidelity prototypes
-        that improve clarity, usability, and consistency across mobile and desktop.
+        This is an ongoing, multi-phase project. The product already existed when I joined, and I was
+        brought in to evaluate the existing experience, redesign key flows and components, and deliver
+        high-fidelity prototypes that improve clarity, usability, and consistency across mobile and desktop.
       </p>
     </section>
 
@@ -88,7 +87,7 @@
           <li>Overlooked important aspects like security and privacy settings.</li>
         </ul>
         <p>
-          My task was to evaluate the existing work, identify gaps, and redesign core experiences
+          My task was to inherit the existing work, identify gaps, and redesign core experiences
           while keeping the client’s creative direction in mind.
         </p>
       </div>
@@ -429,3 +428,4 @@
   </footer>
 </body>
 </html>
+
