--- a/flying-wings.html
+++ b/flying-wings.html
@@ -108,144 +108,43 @@
       </div>
     </section>
 
-    <!-- DESIGN SYSTEM SECTION (MAJOR HIGHLIGHT) -->
+       <!-- DESIGN SYSTEM FOUNDATIONS -->
     <section class="cs-section">
-      <h2>Design System for White-Label Scalability</h2>
+      <h2>Design System Foundations</h2>
       <p>
-        Because this experience needed to be white-labeled and reused for multiple clients, I didn’t
-        just design screens – I built a small but powerful design system to support them.
+        Because Flying Wings needed to scale across multiple airline partners, I built a full
+        white-label design system from scratch. The system defined color, typography, components,
+        and interaction states so future brands could be launched quickly without redesigning the
+        experience each time.
       </p>
 
-      <article class="cs-subsection">
-        <h3>Foundations: Color, Type, and Layout</h3>
-        <p>
-          I started by defining UI foundations that could support both a neutral base and branded
-          themes:
-        </p>
-        <ul>
-          <li>
-            <strong>Color palette:</strong> a primary accent, secondary accents, neutrals, and
-            semantic colors (success, warning, error) that can be remapped for new brands.
-          </li>
-          <li>
-            <strong>Typography scale:</strong> consistent styles for headings, body text, labels,
-            buttons, and form instructions so content stays legible and cohesive.
-          </li>
-          <li>
-            <strong>Spacing & grids:</strong> regular spacing increments and multi-column layouts
-            to keep pages aligned and predictable.
-          </li>
-        </ul>
-
+      <div class="cs-grid">
+        <!-- White-label base theme (colors + type) -->
         <figure class="cs-figure">
-          <div class="placeholder-box">
-            <span>Design system foundations – color palette, typography, and spacing</span>
-          </div>
+          <img
+            src="assets/images/fw-ds-theme-base.png"
+            alt="White-label Flying Wings design system showing theme color palette and typography scale"
+          />
           <figcaption>
-            Core styles defined once and reused across homepage, search, results, and checkout.
+            White-label base theme: core colors, background and error states, and typography scale
+            used as the foundation for all variants.
           </figcaption>
         </figure>
-      </article>
 
-      <article class="cs-subsection">
-        <h3>Components: Building Blocks for the Experience</h3>
-        <p>
-          On top of the foundations, I created reusable components for the key elements of the flow:
-        </p>
-        <ul>
-          <li>
-            <strong>Navigation:</strong> header with logo, main nav, and call-to-action placement.
-          </li>
-          <li>
-            <strong>Search module:</strong> trip type toggles (return/one-way), cabin class,
-            passengers, origin/destination, and date inputs.
-          </li>
-          <li>
-            <strong>Destination cards:</strong> promotional cards for “Destination specials” with
-            price, location, and “per person” messaging.
-          </li>
-          <li>
-            <strong>Flight result rows:</strong> reusable layouts for outbound/inbound flights with
-            times, airports, prices, duration, and stop information.
-          </li>
-          <li>
-            <strong>Form fields:</strong> standardized inputs for passenger details, contact info,
-            and billing, including labels, hints, and error states.
-          </li>
-          <li>
-            <strong>Buttons & states:</strong> primary/secondary buttons and discrete states
-            like “Select”, “Book it”, and “Booked”.
-          </li>
-        </ul>
-
-        <div class="cs-grid">
-          <figure class="cs-figure">
-            <div class="placeholder-box">
-              <span>Reusable search module and navigation components</span>
-            </div>
-            <figcaption>
-              Components that keep the homepage, results, and checkout visually aligned.
-            </figcaption>
-          </figure>
-
-          <figure class="cs-figure">
-            <div class="placeholder-box">
-              <span>Flight result cards and destination specials</span>
-            </div>
-            <figcaption>
-              Card and row patterns that repeat across multiple flows and future clients.
-            </figcaption>
-          </figure>
-        </div>
-      </article>
-
-      <article class="cs-subsection">
-        <h3>Non-Branded Base and Branded Theme</h3>
-        <p>
-          To support future clients, I created two visual states using the same system:
-        </p>
-        <ul>
-          <li>
-            A <strong>non-branded base</strong> with neutral colors and generic “Company Name”
-            styling, used as the starting point for new partners.
-          </li>
-          <li>
-            A <strong>Flying Wings branded theme</strong> with updated colors, imagery, and copy,
-            applied on top of the same core components.
-          </li>
-        </ul>
-        <p>
-          Because everything was built from shared components, updating the brand didn’t mean
-          redesigning screens – it meant swapping tokens and styles.
-        </p>
-
+        <!-- Branded Flying Wings palette -->
         <figure class="cs-figure">
-          <div class="placeholder-box">
-            <span>Base vs branded homepage using the same component system</span>
-          </div>
+          <img
+            src="assets/images/fw-ds-theme-branded.png"
+            alt="Flying Wings branded blue palette and logo treatment"
+          />
           <figcaption>
-            The design system made it easy to move from neutral demo state to a fully branded client experience.
+            Branded Flying Wings palette: extended blues and logo treatment applied on top of the
+            white-label system for this client.
           </figcaption>
         </figure>
-      </article>
-
-      <article class="cs-subsection">
-        <h3>Why This Matters</h3>
-        <p>
-          Practically, the design system allowed us to:
-        </p>
-        <ul>
-          <li>Update visual themes without rebuilding layouts.</li>
-          <li>Keep the booking flow consistent as new features are added.</li>
-          <li>Hand off a clear, structured UI kit to development.</li>
-          <li>Use the same demo for multiple client conversations with minimal tweaks.</li>
-        </ul>
-        <p>
-          This project wasn’t just “a set of screens” – it was a reusable, scalable product
-          foundation.
-        </p>
-      </article>
+      </div>
     </section>
+
 
     <!-- PROCESS -->
     <section class="cs-section">
