--- a/flying-wings.html
+++ b/flying-wings.html
@@ -39,16 +39,16 @@
         <h2>Project Details</h2>
         <dl>
           <dt>Project Type</dt>
-          <dd>End-to-End Website & White-Label Design System</dd>
+          <dd>End-to-End Website &amp; White-Label Design System</dd>
 
           <dt>Role</dt>
           <dd>
-            Sole UX/UI Designer<br/>
+            Sole UX/UI Designer<br />
             Design System Creator
           </dd>
 
           <dt>Industry</dt>
-          <dd>Travel & Tourism · SaaS</dd>
+          <dd>Travel &amp; Tourism · SaaS</dd>
 
           <dt>Tools</dt>
           <dd>Figma, Balsamiq, Zoom</dd>
@@ -108,7 +108,7 @@
       </div>
     </section>
 
-       <!-- DESIGN SYSTEM FOUNDATIONS -->
+    <!-- DESIGN SYSTEM (BIG HIGHLIGHT) -->
     <section class="cs-section">
       <h2>Design System Foundations</h2>
       <p>
@@ -118,12 +118,12 @@
         experience each time.
       </p>
 
+      <!-- Theme & typography -->
       <div class="cs-grid">
-        <!-- White-label base theme (colors + type) -->
         <figure class="cs-figure">
           <img
             src="assets/images/fw-ds-theme-base.png"
-            alt="White-label Flying Wings design system showing theme color palette and typography scale"
+            alt="White-label Flying Wings design system showing core theme color palette and typography scale"
           />
           <figcaption>
             White-label base theme: core colors, background and error states, and typography scale
@@ -131,20 +131,65 @@
           </figcaption>
         </figure>
 
-        <!-- Branded Flying Wings palette -->
         <figure class="cs-figure">
           <img
             src="assets/images/fw-ds-theme-branded.png"
             alt="Flying Wings branded blue palette and logo treatment"
           />
           <figcaption>
-            Branded Flying Wings palette: extended blues and logo treatment applied on top of the
-            white-label system for this client.
+            Branded Flying Wings palette: extending the white-label system with a full blue
+            gradient and logo treatment for this specific client.
+          </figcaption>
+        </figure>
+      </div>
+
+      <!-- Component gallery -->
+      <div class="cs-grid ds-gallery">
+        <figure class="cs-figure">
+          <img
+            src="assets/images/ds-buttons.png"
+            alt="Design system buttons showing active, inactive and hover states, including primary confirm and search buttons"
+          />
+          <figcaption>
+            Button system: primary, secondary, and search actions with active, inactive, and hover
+            states designed for clear hierarchy in the booking flow.
+          </figcaption>
+        </figure>
+
+        <figure class="cs-figure">
+          <img
+            src="assets/images/ds-text-fields.png"
+            alt="Text field states including resting, activated, selected and error with icon support"
+          />
+          <figcaption>
+            Text fields: consistent patterns for resting, focused, selected, and error states,
+            including icon support for airports, dates, and locations.
+          </figcaption>
+        </figure>
+
+        <figure class="cs-figure">
+          <img
+            src="assets/images/ds-icons.png"
+            alt="Icon set used for passengers, dates, airports, locations and dropdowns"
+          />
+          <figcaption>
+            Iconography: lightweight icon set for passengers, calendar, airports, locations and
+            controls, tuned to work at small sizes in dense forms.
+          </figcaption>
+        </figure>
+
+        <figure class="cs-figure">
+          <img
+            src="assets/images/ds-search-module.png"
+            alt="Flight search module built from the design system components"
+          />
+          <figcaption>
+            Search module: final composition of buttons, text fields, icons and layout rules into a
+            reusable flight search panel for all branded experiences.
           </figcaption>
         </figure>
       </div>
     </section>
-
 
     <!-- PROCESS -->
     <section class="cs-section">
@@ -152,7 +197,7 @@
 
       <!-- 1. Client Sitemap & Structure -->
       <article class="cs-subsection">
-        <h3>1. Client Sitemap & Structure</h3>
+        <h3>1. Client Sitemap &amp; Structure</h3>
         <p>
           The client provided a simple sitemap with top-level navigation:
           <em>Air, Hotels, Cars, About Us, Contact Us</em>. From there, I expanded the structure
@@ -192,7 +237,7 @@
         <div class="cs-grid">
           <figure class="cs-figure">
             <div class="placeholder-box">
-              <span>Homepage wireframe with search & destination specials</span>
+              <span>Homepage wireframe with search &amp; destination specials</span>
             </div>
             <figcaption>
               Early structure for hero messaging, search, and promotional destinations.
@@ -201,7 +246,7 @@
 
           <figure class="cs-figure">
             <div class="placeholder-box">
-              <span>Results & trip summary wireframes</span>
+              <span>Results &amp; trip summary wireframes</span>
             </div>
             <figcaption>
               Exploring how search results and trip summaries would appear side-by-side.
@@ -269,7 +314,7 @@
 
       <!-- 5. Search, Results & Selection -->
       <article class="cs-subsection">
-        <h3>5. Search, Results & Selection Flow</h3>
+        <h3>5. Search, Results &amp; Selection Flow</h3>
         <p>
           The core booking flow needed to be easy to scan and compare. The results layout included:
         </p>
@@ -292,7 +337,7 @@
 
       <!-- 6. Trip Summary & Checkout -->
       <article class="cs-subsection">
-        <h3>6. Trip Summary & Checkout</h3>
+        <h3>6. Trip Summary &amp; Checkout</h3>
         <p>
           After flight selection, users see a combined trip summary and price breakdown, followed by
           passenger and billing forms. The design system ensured:
@@ -341,8 +386,11 @@
 
         <p>
           <strong>View clickable prototype:</strong><br />
-          <a href="https://www.figma.com/proto/XHjMlDq7fsQRESGJkgU5tE/Flyingwings?node-id=201%3A0&scaling=min-zoom&page-id=27%3A35"
-             target="_blank" rel="noopener">
+          <a
+            href="https://www.figma.com/proto/XHjMlDq7fsQRESGJkgU5tE/Flyingwings?node-id=201%3A0&amp;scaling=min-zoom&amp;page-id=27%3A35"
+            target="_blank"
+            rel="noopener"
+          >
             Open the Flying Wings Figma prototype
           </a>
         </p>
@@ -392,3 +440,4 @@
   </footer>
 </body>
 </html>
+
